# job_parser_psql

./: .gitignore  README.md  config.py  main.py  pyproject.toml  utils.py
src/: api_worker.py  db_manager.py
